[package]
name = "gst-plugin-frameid"
version = "0.1.0"
authors = ["Thiago Santos <thiago@waltznetworks.com>"]
license = "MIT/Apache-2.0"

[dependencies]
glib = { git="https://github.com/gtk-rs/glib"}
gstreamer = { git="https://github.com/sdroege/gstreamer-rs"}
gstreamer-video = { git="https://github.com/sdroege/gstreamer-rs"}
gst-plugin = { git="https://github.com/sdroege/gst-plugin-rs" }
qrcode = "0.5.0"
image = "0.17.0"
quirc = { git="https://github.com/wg/quirc-rs" }


[lib]
name = "gstrsframeid"
crate-type = ["cdylib"]
path = "src/lib.rs"
