[package]
name = "video-frameid-prepare"
version = "0.1.0"
authors = ["Thiago Santos <thiagossantos@gmail.com>"]

[dependencies]
failure = "0.1"
failure_derive = "0.1"
gst-plugin-frameid = { path = "../gst-plugin-frameid" }
glib = { git="https://github.com/gtk-rs/glib"}
gstreamer = { git="https://github.com/sdroege/gstreamer-rs"}
gstreamer-base = { git="https://github.com/sdroege/gstreamer-rs"}
gstreamer-video = { git="https://github.com/sdroege/gstreamer-rs"}
gstreamer-app = { git="https://github.com/sdroege/gstreamer-rs"}
